fix: kill bugs? :)